tests/unit-fail-compilation/incompatible-compare.c.ref
incompatible-compare.c:5:3: error: Incompatible types in relational expression.
  Constraint violation (CV-CERL5).
   see C11 section 6.5.8:2 http://rvdoc.org/C11/6.5.8
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
Translation failed (config dumped). Run kcc -d incompatible-compare.c to see commands run.
